fixed form error state layout issues and changed body background color

--- a/app/assets/stylesheets/foundation/_custom-forms.scss
+++ b/app/assets/stylesheets/foundation/_custom-forms.scss
@@ -99,6 +99,7 @@ $custom-dropdown-width-large: 434px !default;
         }
         &:hover {
         border-color: $primary-color;
+        cursor: $form-label-pointer;
         }
       }
 
