--- a/app/assets/stylesheets/foundation/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation/foundation_and_overrides.scss
@@ -65,7 +65,7 @@ $em-base: 16px !default;
 
 $default-float: left;
 
-// $body-bg: #fff;
+$body-bg: #fdfdfd;
 $body-font-color: #4a4a4a;
 $body-font-family: $serif-font-family;
 // $body-font-weight: normal;
@@ -341,8 +341,8 @@ $input-box-shadow: none;
 
 // We use these to style the error states for inputs and labels
 
-$input-error-message-padding: em-calc(10 4);
-// $input-error-message-top: 0;
+$input-error-message-padding: em-calc(10 10);
+$input-error-message-top: 0;
 $input-error-message-font-family: $sans-font-family;
 $input-error-message-font-size: em-calc(14);
 $input-error-message-font-weight: normal;
